--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,18 +1,18 @@
 * {
-    font-family: "Font Awesome 6 Free";
-    font-size: 15px;
+  font-family: "JetBrains Mono";
+  font-size: 15px;
 }
 
 window#waybar {
-    color: #bd93f9;
-    background-color: rgba(40, 42, 54, 0.7);
-    border-radius: 0%;
+  color: #bd93f9;
+  background-color: rgba(40, 42, 54, 0.7);
+  border-radius: 0%;
 }
 
 .modules-center,
 .modules-left,
 .modules-right {
-    min-height:40px;
+  min-height: 40px;
 }
 
 #clock,
@@ -27,15 +27,15 @@ window#waybar {
 #custom-spotify,
 #custom-weather,
 #custom-notification {
-    padding: 0 15px;
+  padding: 0 15px;
 }
 
 #battery.charging {
-    background-color: transparent;
-    color: #50fa7b;
+  background-color: transparent;
+  color: #50fa7b;
 }
 
 #battery.warning:not(.charging) {
-    background-color: transparent;
-    color: #ff5555;
+  background-color: transparent;
+  color: #ff5555;
 }
