massive move to catppuccin + new monitor for laptop

--- a/wofi/style.widgets.css
+++ b/wofi/style.widgets.css
@@ -7,39 +7,39 @@ Arc-Dark Color Scheme
 @define-color base2  #40455;
 @define-color base3  #4b5160;
 
-*{
-    font-family: UbuntuMono;
+* {
+  font-family: Hack Nerd Font;
 }
 
 #window {
-    border: 1px solid @highlight;
-    margin: 0px 5px 0px 5px;
+  border: 1px solid @highlight;
+  margin: 0px 5px 0px 5px;
 }
 
 #inner-box {
-    background-color: @base2;
+  background-color: @base2;
 }
 
 #outer-box {
-    margin: 5px;
-    padding:10px;
-    background-color: @base2;
-    margin-top: -22px;
+  margin: 5px;
+  padding: 10px;
+  background-color: @base2;
+  margin-top: -22px;
 }
 
 #text {
-    padding: 5px;
-    color: white;
+  padding: 5px;
+  color: white;
 }
 
 #entry:nth-child(even) {
-    background-color: @base1;
+  background-color: @base1;
 }
 
 #entry {
-    background-color: @base3;
+  background-color: @base3;
 }
 
 #entry:selected {
-    background-color: @highlight;
+  background-color: @highlight;
 }
